# pocketsphinx_fetch_content_example

./: CMakeLists.txt  main.cpp  simple.c
